# poc-fastapi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .sample.conf  .sample.env  Dockerfile  Makefile  README.md  alembic.ini  config.py  conftest.py  docker-compose.yaml  newrelic.ini  pyproject.toml  setup.cfg  testing.conf
alembic/: env.py
alembic/versions/: b7c3c0106422_.py  f893670d9ef7_.py
entrypoint/: entrypoint.sh
poc_fastapi/: app.py  exceptions.py
poc_fastapi/db/: base.py
poc_fastapi/models/: __init__.py  base.py  post.py  user.py
poc_fastapi/routers/: auth.py  post.py  user.py
poc_fastapi/schemas/: auth.py  health_check.py  params.py  post.py  user.py
poc_fastapi/services/: auth.py  health_check.py  post.py  user.py
poc_fastapi/validators/: permission.py
tests/: test_poc_fastapi.py
tests/models/: test_user_model.py
tests/routers/: test_auth_router.py  test_health_check_router.py  test_post_router.py  test_user_router.py
tests/schemas/: test_post_schema.py  test_user_schema.py
tests/services/: test_auth_service.py  test_user_service.py
tests/validators/: test_permission_validator.py
